# hpce_utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py
src/hpc_env/: lmod.py  utils.py
src/hpc_env/shell/: __init__.py
src/hpc_env/uge/: __init__.py  status.py
src/hpce_utils/: __init__.py  version.py
src/hpce_utils/command_line/: __main__.py
src/hpce_utils/env/: __init__.py
src/hpce_utils/env/lmod/: __init__.py
src/hpce_utils/files/: __init__.py
src/hpce_utils/managers/: __init__.py
src/hpce_utils/managers/uge/: __init__.py  constants.py  status.py  submitting.py
src/hpce_utils/managers/uge/templates/: submit-holding.jinja  submit-task-array.jinja
src/hpce_utils/queues/: __init__.py
src/hpce_utils/queues/uge/: __init__.py  constants.py  status.py  submitting.py
src/hpce_utils/queues/uge/templates/: submit-task-array.jinja
src/hpce_utils/shell/: __init__.py  argutil.py
tests/: conftest.py  test_lmod.py  test_shell.py  test_status.py  test_uge.py
tests/resources/lmod/modules/: test.lua
