[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hpce_utils"
dynamic = ["version"]
authors = [
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "hpce_utils.__version__"}

[options.packages.find]
where="src"

[tool.setuptools.package-data]
"*" = ["*.jinja"]
